# moiro_description

./: CMakeLists.txt  README.md  package.xml
meshes/: base_plate.stl  base_scan.stl  camera_link.stl  camera_zig.stl  caster_3.stl  caster_4.stl  caster_5.stl  caster_6.stl  cobot_camera.stl  imu_link.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  motor_left.stl  motor_right.stl  wheel_left.stl  wheel_right.stl
urdf/: moiro.xacro
